<resources>
    <string name="app_name">TerraScan</string>
    <string name="hi_welcome_back">Hi, Welcome Back!</string>
    <string name="hello_again_you_ve_been_missed">Hello again, you’ve been missed!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="logo_image">Logo Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="toggle_eye">Toggle Eye</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="connect_with_your_friends_today">Connect with your friends today!!</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="default_image_profile">Default Image Profile</string>
    <string name="logo_text">Logo Text</string>
    <string name="main_background">Main Background</string>
    <string name="button_scan">Button Scan</string>
    <string name="button_profile">Button Profile</string>
    <string name="button_home">Button Home</string>
    <string name="supportview_for_scan_icon">supportView for scan icon</string>
    <string name="send_otp_to_your_email"><u>Send OTP to your email</u></string>
    <string name="ph">
pH : 8\nIklim : Musim Hujan\nCahaya : Penuh\nSuhu 36\u00C2\u00B0C\n\nJenis Tanaman : Sayuran\nRekomendasi Tanaman: Terong, buncis, timun, labu
</string>
</resources>