<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="fill_horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Edit Profile"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:background="@drawable/bg_profile"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </FrameLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_20sdp"
        android:scrollbars="none"
        tools:context=".activities.SignInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_150sdp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/username"
                android:textColor="@color/primary_60"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_username"
                android:textColorHint="@color/neutral_40"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/email"
                android:textColor="@color/primary_60"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_email"
                android:textColorHint="@color/neutral_40"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/phone_number"
                android:textColor="@color/primary_60"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_phone_number"
                android:textColorHint="@color/neutral_40"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"/>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:backgroundTint="@color/primary_90"
                    app:cornerRadius="@dimen/_8sdp"
                    android:text="Submit"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"/>

                <ProgressBar
                    android:id="@+id/progessBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>


        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>