<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_20sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/terrascan_logo"
            android:contentDescription="@string/logo_image" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password ?"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/header_title_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please Reset your Password!"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/neutral_40" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/email"
            android:textColor="@color/primary_60"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_your_email"
            android:textColorHint="@color/neutral_40"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="Phone number"
            android:textColor="@color/primary_60"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            android:hint="Enter your phone number"
            android:textColorHint="@color/neutral_40"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="New password"
            android:textColor="@color/primary_60"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/neutral_40"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                app:layout_constraintTop_toTopOf="@id/layoutNewPassword"
                app:layout_constraintBottom_toBottomOf="@id/layoutNewPassword"/>

            <ImageButton
                android:id="@+id/toggleNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_eye"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="@+id/inputNewPassword"
                app:layout_constraintTop_toTopOf="@+id/inputNewPassword"
                app:layout_constraintBottom_toBottomOf="@id/inputNewPassword"
                android:contentDescription="@string/toggle_eye" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="Confirm password"
            android:textColor="@color/primary_60"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                android:hint="Confirm your password"
                android:textColorHint="@color/neutral_40"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                app:layout_constraintTop_toTopOf="@id/layoutConfirmPassword"
                app:layout_constraintBottom_toBottomOf="@id/layoutConfirmPassword"/>

            <ImageButton
                android:id="@+id/toggleConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_eye"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
                app:layout_constraintTop_toTopOf="@+id/inputConfirmPassword"
                app:layout_constraintBottom_toBottomOf="@id/inputConfirmPassword"
                android:contentDescription="@string/toggle_eye" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonChange"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:backgroundTint="@color/primary_90"
                app:cornerRadius="@dimen/_8sdp"
                android:text="Change Password"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"/>

            <ProgressBar
                android:id="@+id/progessBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/layoutSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back ?"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/neutral_40"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/primary_60"/>

        </LinearLayout>
    </LinearLayout>





</ScrollView>
